@@ -1,23 +1,23 @@
 package ru.nstu.lab1.data;
 
 import org.reflections.Reflections;
-import ru.nstu.lab1.data.builder.TypeBuilder;
+import ru.nstu.lab1.data.builder.ObjectBuilder;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-public class TypeBuilderFactory {
-    private final static List<TypeBuilder> builders = new ArrayList<>();
+public class ObjectBuilderFactory {
+    private final static List<ObjectBuilder> builders = new ArrayList<>();
 
     static {
         Reflections reflections = new Reflections("ru.nstu.lab1.data.builder");
-        Set<Class<? extends TypeBuilder>> buildersClasses = reflections.getSubTypesOf(TypeBuilder.class);
+        Set<Class<? extends ObjectBuilder>> buildersClasses = reflections.getSubTypesOf(ObjectBuilder.class);
         buildersClasses.forEach(bc -> {
             try {
-                TypeBuilder typeBuilder = bc.newInstance();
-                builders.add(typeBuilder);
+                ObjectBuilder objectBuilder = bc.getDeclaredConstructor().newInstance();
+                builders.add(objectBuilder);
             } catch (Exception ignored) {
                 throw new RuntimeException("Something went wrong...");
             }
@@ -25,12 +25,12 @@ public class TypeBuilderFactory {
     }
 
     public static Set<String> getAllTypes() {
-        return builders.stream().map(TypeBuilder::typeName).collect(Collectors.toSet());
+        return builders.stream().map(ObjectBuilder::typeName).collect(Collectors.toSet());
     }
 
-    public static TypeBuilder getBuilder(String name) {
+    public static ObjectBuilder getBuilder(String name) {
         if (name == null) throw new NullPointerException();
-        for (TypeBuilder b : builders) {
+        for (ObjectBuilder b : builders) {
             if (name.equals(b.typeName())) return b;
         }
         throw new IllegalArgumentException();
